<resources>
    <string name="app_name">AutoCifra</string>

    <!-- General Strings-->
    <string name="version_name">Versão\u0020</string>
    <string name="string_not_found">Não foi encontrado</string>

    <!-- Screen Titles-->
    <string name="cifras_title">Cifras</string>
    <string name="playlists_title">Playlists</string>
    <string name="ranking_title">Ranking</string>
    <string name="talent_title">Mostre Seu Talento</string>
    <string name="about_title">Sobre</string>
    <string name="add_cifra_title">Adicionar Cifra</string>
    <string name="login_title">Login</string>
    <string name="sign_up_title">Cadastrar</string>
    <string name="profile_title">Perfil</string>

    <!-- Drawer Strings-->
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>

    <!-- Menu Strings-->
    <string name="search_menu">Pesquisar</string>
    <string name="help_menu">Ajuda</string>
    <string name="next_arrow">Prosseguir</string>

    <!-- Add Cifra Strings-->
    <string name="add_cifra_music_title">MÚSICA</string>
    <string name="add_cifra_artist_title">ARTISTA</string>
    <string name="add_cifra_tuning_title">TOM</string>
    <string name="add_cifra_music_hint">Digite o nome da Música</string>
    <string name="add_cifra_artist_hint">Digite o nome do Artista</string>
    <string name="add_cifra_continue_button">CONTINUAR</string>
    <string name="add_cifra_send_button">ENVIAR</string>

    <!-- Login Strings-->
    <string name="login_email_input_title">E-MAIL</string>
    <string name="login_password_input_title">SENHA</string>
    <string name="login_email_input_hint">Digite seu e-mail</string>
    <string name="login_password_input_hint">Digite sua senha</string>
    <string name="login_sign_up_button">CADASTRAR</string>
    <string name="login_button">LOGIN</string>

    <!-- Sign Up Strings-->
    <string name="sign_up_name_input_title">NOME</string>
    <string name="sign_up_instrument_input_title">INSTRUMENTO PRINCIPAL</string>
    <string name="sign_up_email_input_title">E-MAIL</string>
    <string name="sign_up_password_input_title">SENHA</string>
    <string name="sign_up_confirm_password_input_title">CONFIRMAR SENHA</string>
    <string name="sign_up_name_input_hint">Digite seu nome</string>
    <string name="sign_up_email_input_hint">Digite seu e-mail</string>
    <string name="sign_up_password_input_hint">Digite sua senha</string>
    <string name="sign_up_confirm_password_input_hint">Digite novamente sua senha</string>
    <string name="sign_up_photo_text">Adicione uma foto</string>
    <string name="sign_up_finish_button">FINALIZAR</string>

    <!-- Profile Strings-->
    <string name="profile_login_message">Login ou Criar Conta</string>
    <string name="profile_take_picture">Tirar foto</string>
    <string name="profile_choose_picture">Galeria</string>
    <string name="profile_picture_back">Voltar</string>
    <string name="profile_add_picture">Adicionar Foto</string>
    <string name="profile_picture_choose_file">Escolher arquivo</string>

    <!-- Validation Strings-->
    <string name="login_email_invalid">O formato do e-mail está incorreto</string>
    <string name="login_password_invalid">A senha deve ter no mínimo 6 caracteres</string>
    <string name="sign_up_email_invalid">O formato do e-mail está incorreto</string>
    <string name="sign_up_password_invalid">A senha deve ter no mínimo 6 caracteres</string>
    <string name="sign_up_confirm_password_invalid">A senha e a confirmação de senha estão diferentes</string>
    <string name="add_cifra_empty_fields">Preencha todos os campos</string>

    <!-- About Text-->
    <string name="about_text">O aplicativo AutoCifra tem como objetivo facilitar a vida daqueles que
        gostam de reproduzir suas músicas favoritas ou até mesmo aprender uma nova composição, melodia ou instrumento.
        \nCriado exclusivamente para adoradores da música, sendo um instrumentista ou não.\n\nNunca é tarde para ser um grande músico.</string>


    <!--REMOVER-->
    <string name="test_cifra">      Am7
\nOlha aí, o mundo girando
\n                   C
\nE a gente se esbarrando outra vez
\n         Am7
\nOlha aí,     o meu coração
\n                 C
\nIndo contra a razão sentimento
\n
\n
\nSegunda Parte:
\n           Dm
\nNão se desfez, recaí
\n           F9
\nQuando te vi
\n                 G9
\nA paixão veio a tona
\n         Dm
\nFui a nocaute, beijei a lona
\n       F9       G9
\nO meu corpo tremeu
\n   F9              G9
\nO tempo passou, a vida mudou
\nF9             G9
\n  Mas eu continuo seu
\n
\n
\nRefrão:
\n             Dm
\nAinda sou o mesmo
\n            F7M/C
\nBobo apaixonado
\n               C
\nSe eu estou errado
\n                 G
\nNão quero nem saber
\n                 Dm
\nEu só sei que a vida
\n            F7M/C
\nÉ mais colorida
\n       C         G
\nCom você, com você, iê iê
\n
\n
\nRepete a Intro 4x: Am7 C
\n
\n
\nRepete a Primeira Parte:
\n      Am7
\nOlha aí, o mundo girando
\n                   C
\nE a gente se esbarrando outra vez
\n         Am7
\nOlha aí,     o meu coração
\n                 C
\nIndo contra a razão sentimento
\n
\n
\nRepete a Segunda Parte:
\n           Dm
\nNão se desfez, recaí
\n           F9
\nQuando te vi
\n                 G9
\nA paixão veio a tona
\n         Dm
\nFui a nocaute, beijei a lona
\n       F9       G9
\nO meu corpo tremeu
\n   F9              G9
\nO tempo passou, a vida mudou
\nF9             G
\n  Mas eu continuo seu
\n
\nRefrão Final:
\n            Dm
\nAinda sou o mesmo
\n            F7M/C
\nBobo apaixonado
\n               C
\nSe eu estou errado
\n                 G
\nNão quero nem saber
\n                 Dm
\nEu só sei que a vida
\n            F7M/C
\nÉ mais colorida
\n       C         G
\nCom você, com você
\n
\n           Dm
\nAinda sou o mesmo
\n            F7M/C
\nBobo apaixonado
\n               C
\nSe eu estou errado
\n                 G
\nNão quero nem saber
\n                 Dm
\nEu só sei que a vida
\n            F7M/C
\nÉ mais colorida
\n       C         G
\nCom você, com você
\n
\nCom você, com você</string>
</resources>
